# Qt

admtelekomwv/: CMakeLists.txt  Main.qml  asyncImageprovider.h  frameprovider.h  frameworker.h  httpreader.cpp  httpreader.h  imageresponse.cpp  imageresponse.h  main.cpp  networkchecker.h  thumbnailprovider.cpp  thumbnailprovider.h  vlcmanager.h  vlcplayer.cpp  vlcplayer.h
admtelekomwv/Config/: Config.qml
admtelekomwv/MediaControls/: CustomSlider.qml  PlaybackControl.qml  PlaybackSeekControl.qml
admtelekomwv/android/: AndroidManifest.xml
courierapp/: CMakeLists.txt  Main.qml  OrderDetailPage.qml  OrderListPage.qml  main.cpp  order.h  orderhandler.h  ordermodel.h  qml.qrc
